# miniMidiOut

./: .gitignore  CMakeLists.txt  Dockerfile  FileLogger.cs  HelperForm.cs  IconFactory.cs  LICENSE  Modus.c  NoiseDetail.h  Program.cs  PseudoRandom.c  README.md  RecycleList.hpp  SynthApp.cs  SynthApp.hpp  SynthMixer.cs  Timetools.c  UiForm.cs  Voice.c  Voice.cpp  Voice.cs  Voice.h  Waveform.hpp  Waveforms.cs  buildroot-2025.02.9-config.txt  device.c  docker-entrypoint.sh  eeepc_4G_701-buildroot-2025.02.9-config.txt  eeepc_4G_701-syslinux.cfg  globals.c  keyboard.c  main.c  midi.c  midiSynth.c  miniMidiOut  miniMidiOut.c  modus.c  noise.c  platformio.ini  player.c  (+5 more)
device/: midi.c
eeepc_4G_701/: buildroot-2025.02.9-config.txt  buildroot.config  genimage.cfg  kernel-config.txt  kernel.config  post-build.sh  post-image.sh  syslinux.cfg
eeepc_4G_701/rootfs-overlay/etc/: inittab  profile
eeepc_4G_701/rootfs-overlay/etc/init.d/: S99midisynth  S99miniMidiOut  S99minimidiout
eeepc_4G_701/rootfs-overlay/etc/modules-load.d/: sound-modules.conf
eeepc_4G_701/rootfs-overlay/etc/network/: interfaces
etc/: default.conf
extra/: pre_build.py  retroChassis2.wings  retroChassis5.wings  retroChassisA.stl  retroChassisB.stl
include/: MemoryLock.h  Modus.h  NoiseDetail.h  PseudoRandom.h  SynthApp.hpp  Timetools.h  Voice.h  Voice.hpp  Waveform.hpp  device.h  globals.h  keyboard.h  midi.h  modulation.hpp  modus.h  noise.h  octave.hpp  pitchbend.hpp  player.h  pseudo_random.h  realtime.h  sustain.hpp  time_tools.h  voice.h  voice.hpp
include/device/: keyboard.h  midi.h
misc/: DETAILS.md
pi1/: buildroot-2025.02.9-config.txt  buildroot-2025.02.9-config_sox_no-oss.txt  buildroot.config  cmdline.txt  config.txt  genimage.cfg.in  kernel-config.txt  kernel.config  linux-kernel.config  pi1_defconfig  post-build.sh
pi1/rootfs-overlay/etc/: profile
pi1/rootfs-overlay/etc/init.d/: S99midisynth  S99miniMidiOut  S99minimidiout
pi1/rootfs-overlay/etc/modules-load.d/: sound-modules.conf
pi1/rootfs-overlay/etc/systemd/system/: autologin-root.service
pkg/: Config.in  midisynth.mk  miniMidiOut.mk  minimidiout.mk
src/: Modus.cpp  Program.cpp  PseudoRandom.cpp  SynthApp.cpp  device.cpp  globals.cpp  main.cpp  modulation.cpp  noise.cpp  octave.cpp  pitchbend.cpp  player.cpp  pseudo_random.cpp  realtime.cpp  sustain.cpp  time_tools.cpp  unused.cpp  voice.cpp
src/device/: keyboard.cpp  midi.cpp
